# cfg-cpf-validator

./: LICENSE  pyproject.toml
src/cfg_cpf_validator/: __init__.py
src/cfg_cpf_validator/cfg/: __init__.py
src/cgf_cpf_validator/: __init__.py
