[project]
name = "cgf-cpf-validator"
version = "0.1.0"
description = "Biblioteca Python que valida CPFs (Cadastro de Pessoa Física) utilizando Linguagens Livres de Contexto (CFG)."
readme = "README.md"
authors = [
    { name = "Gabriel Gaia", email = "gaiagabriel22@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 4
line-length = 80
target-version = "py38"

[tool.ruff.lint]
select = [
    'E',    # pycodestyle
    'W',    # pycodestyle
    'F',    # Pyflakes
    'UP',   # pyupgrade
    'I',    # isort
    'B',    # flake8-bugbear
    'SIM',  # flake8-simplify
    'PL',   # Pylint
    'PT',   # flake8-pytest-style
]
